subjects/FormalLanguages/formal_languages/lexer/tests/positive/sample_prog.l
// sample program from the problem statement.
read x;
if y + 1 == x 
then write y
else write x
