subjects/FormalLanguages/formal_languages/lexer/tests/negative/nonexist_binop_2.l


read x
read y

if x === y then write 1 else write 0
